==============
lxml changelog
==============

Under development
==================

Features added
--------------

Bugs fixed
----------

* Diverting the error logging to Python's logging system was broken.

Other changes
-------------


2.2.2 (2009-06-21)
==================

Features added
--------------

* New helper functions ``strip_attributes()``, ``strip_elements()``,
  ``strip_tags()`` in lxml.etree to remove attributes/subtrees/tags
  from a subtree.

Bugs fixed
----------

* Namespace cleanup on subtree insertions could result in missing
  namespace declarations (and potentially crashes) if the element
  defining a namespace was deleted and the namespace was not used by
  the top element of the inserted subtree but only in deeper subtrees.

* Raising an exception from a parser target callback didn't always
  terminate the parser.

* Only {true, false, 1, 0} are accepted as the lexical representation for
  BoolElement ({True, False, T, F, t, f} not any more), restoring lxml <= 2.0
  behaviour.

Other changes
-------------


2.2.1 (2009-06-02)
==================

Features added
--------------

* Injecting default attributes into a document during XML Schema
  validation (also at parse time).

* Pass ``huge_tree`` parser option to disable parser security
  restrictions imposed by libxml2 2.7.

Bugs fixed
----------

* The script for statically building libxml2 and libxslt didn't work
  in Py3.

* ``XMLSchema()`` also passes invalid schema documents on to libxml2
  for parsing (which could lead to a crash before release 2.6.24).

Other changes
-------------


2.2 (2009-03-21)
================

Features added
--------------

* Support for ``standalone`` flag in XML declaration through
  ``tree.docinfo.standalone`` and by passing ``standalone=True/False``
  on serialisation.

Bugs fixed
----------

* Crash when parsing an XML Schema with external imports from a
  filename.


2.2beta4 (2009-02-27)
=====================

Features added
--------------
