@@ -603,6 +603,64 @@ class ETreeOnlyTestCase(HelperTestCase):
                           tree.parse, BytesIO("<TAG/>"), parser=parser)
         self.assertEquals(["start", "end"], events)
 
+    def test_parser_target_feed_exception(self):
+        # ET doesn't call .close() on errors
+        events = []
+        class Target(object):
+            def start(self, tag, attrib):
+                events.append("start-" + tag)
+            def end(self, tag):
+                events.append("end-" + tag)
+                if tag == 'a':
+                    raise ValueError("dead and gone")
+            def data(self, data):
+                events.append("data-" + data)
+            def close(self):
+                events.append("close")
+                return "DONE"
+
+        parser = self.etree.XMLParser(target=Target())
+
+        try:
+            parser.feed(_bytes('<root>A<a>ca</a>B</root>'))
+            done = parser.close()
+            self.fail("error expected, but parsing succeeded")
+        except ValueError:
+            done = 'value error received as expected'
+
+        self.assertEquals(["start-root", "data-A", "start-a",
+                           "data-ca", "end-a", "close"],
+                          events)
+
+    def test_parser_target_fromstring_exception(self):
+        # ET doesn't call .close() on errors
+        events = []
+        class Target(object):
+            def start(self, tag, attrib):
+                events.append("start-" + tag)
+            def end(self, tag):
+                events.append("end-" + tag)
+                if tag == 'a':
+                    raise ValueError("dead and gone")
+            def data(self, data):
+                events.append("data-" + data)
+            def close(self):
+                events.append("close")
+                return "DONE"
+
+        parser = self.etree.XMLParser(target=Target())
+
+        try:
+            done = self.etree.fromstring(_bytes('<root>A<a>ca</a>B</root>'),
+                                         parser=parser)
+            self.fail("error expected, but parsing succeeded")
+        except ValueError:
+            done = 'value error received as expected'
+
+        self.assertEquals(["start-root", "data-A", "start-a",
+                           "data-ca", "end-a", "close"],
+                          events)
+
     def test_parser_target_comment(self):
         events = []
         class Target(object):
